@@ -10,4 +10,5 @@
 <li><a href="07 Resources/readme.html">07 Resources</a>: how to include files into the resources of the xxl module</li>
 <li><a href="08 Cross Project Includes/readme.html">08 Cross Project Includes</a>: demonstration of projects including fragments of eachother</li>
 <li><a href="09 Upload Progress/readme.html">09 Upload Progress</a>: how to display the progress of large file uploads</li>
+<li><a href="10 Override Parser Values/readme.html">10 Override Parser Values</a>: demonstration of setting parser values</li>
 </ul>
